# devtools

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Readme.md  SECURITY.md  generate_app_info.sh  release-please-config.json  tsconfig.json  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: code-quality.yml  release-please.yml  semantic-pr.yml
.qtc_clangd/: compile_commands.json
application/: application_mixin.cpp  application_mixin.h
core/: application_mixin.cpp  application_mixin.h  enum_cast.h  tool.cpp  tool.h
core/context/: image_editor_context.cpp  image_editor_context.h
core/data_conversion/: data_conversion.cpp  data_conversion.h
core/data_conversion/emitter/: base_emitter.cpp  base_emitter.h  basic_emitter.cpp  basic_emitter.h  json_emitter.cpp  json_emitter.h  toml_emitter.cpp  toml_emitter.h  yaml_emitter.cpp  yaml_emitter.h
core/data_conversion/parser/: basic_parser.cpp  basic_parser.h  json_parser.cpp  json_parser.h  toml_parser.cpp  toml_parser.h  yaml_parser.cpp  yaml_parser.h
core/exception/: common_exception.cpp  common_exception.h  invalid_argument_exception.h  invalid_state_exception.h  out_of_range_exception.h  under_development_exception.h
core/image/: basic_image_edit_interface.cpp  basic_image_edit_interface.h  basic_image_io.cpp  basic_image_io.h
core/image/division/: image_division.cpp  image_division.h
core/image/resize/: image_resize.cpp  image_resize.h
core/image/rotation/: image_rotation.cpp  image_rotation.h
core/image/split/: image_split.cpp  image_split.h
core/image/transparent/: image_transparent.cpp  image_transparent.h
core/image_resize/: image_resize.cpp  image_resize.h
core/qr_tool/: content_generator.cpp  content_generator.h  qrcodegen.cpp
core/tool/: tool.cpp  tool.h  tool_factory.cpp  tool_factory.h  tool_id_fields.h
distribution/: DevTools.entitlements  Info.plist.in
docs/: DevToolsDocs.cmake  Doxyfile.in  index.md
docs/api/: README.md
docs/development/: adding-new-tools.md  architecture.md  coding-standards.md  localization.md  testing-guide.md
docs/distribution/: how_to_distribute.md
docs/getting-started/: installation.md  quick-start.md
docs/ja/: BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
docs/troubleshooting/: common-issues.md  faq.md
docs/user-guide/: api-testing.md  command-execution.md  data-conversion.md  image-processing.md  overview.md  phrase-generation.md  qr-code-generation.md
doxygen/: DevToolsDocs.cmake  Doxyfile.in
gui/: api_tool.cpp  api_tool.h  api_tool.ui  contents_area.cpp  contents_area.h  contents_area.ui  customsplitter.cpp  customsplitter.h  gui_application.cpp  gui_application.h  gui_tool.cpp  gui_tool.h  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  sidemenu.cpp  sidemenu.h  sidemenu.ui  sidemenu_item.cpp  sidemenu_item.h  welcome_page.cpp  welcome_page.h  welcome_page.ui
gui/basic_image_view/: basic_image_view.cpp  basic_image_view.h  file_dialogs.h
gui/command/: command.cpp  command.h  command.ui  command_function.h  command_option.h
gui/data_conversion/: data_conversion_gui.cpp  data_conversion_gui.h  data_conversion_gui.ui
gui/db_tool/connection_selector/: connection_selector.cpp  connection_selector.h  connection_selector.ui
gui/db_tool/connection_window/: connection_window.cpp  connection_window.h  connection_window.ui
gui/db_tool/main/: db_main.cpp  db_main.h  db_main.ui
gui/db_tool/query_page/: query_page.cpp  query_page.h  query_page.ui
gui/image/basic/: control.cpp  control.h  control.ui  display_menu.cpp  display_menu.h  file_dialogs.cpp  file_dialogs.h  function_area.cpp  function_area.h  function_area.ui  image_view.cpp  image_view.h  image_view.ui
gui/image/division/: image_division_gui.cpp  image_division_gui.h  image_division_gui.ui  image_view_for_image_division.cpp  image_view_for_image_division.h
gui/image/main/: image_main.cpp  image_main.h  image_main.ui
gui/image/resize/: image_resize_gui.cpp  image_resize_gui.h  image_resize_gui.ui
gui/image/rotation/: image_rotation_gui.cpp  image_rotation_gui.h  image_rotation_gui.ui
gui/image/split/: image_split_gui.cpp  image_split_gui.h  image_split_gui.ui  image_view_for_image_split.cpp  image_view_for_image_split.h
gui/image/transparent/: color_sample.cpp  color_sample.h  image_transparent_gui.cpp  image_transparent_gui.h  image_transparent_gui.ui  image_view_for_image_transparent.cpp  image_view_for_image_transparent.h
gui/image_resize/: image_resize_gui.cpp  image_resize_gui.h  image_resize_gui.ui
gui/menubar/: about_devtools_dialog.cpp  about_devtools_dialog.h  about_devtools_dialog.ui  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui
gui/phrase_generation/: ItemWidget.cpp  ItemWidget.h  ItemWidget.ui  home.cpp  home.h  home.ui  phrase_generation.cpp  phrase_generation.h  phrase_generation.ui
gui/qr_code/: qr_code_generation_gui.cpp  qr_code_generation_gui.h  qr_code_generation_gui.ui
include/application/: application_mixin.h
include/gui/: gui_application.h  mainwindow.h
main/: main.cpp
res/: application.qrc  dark_icons.qrc  dev-tools.icns  dev-tools_en.ts  dev-tools_ja_JP.ts  light_icons.qrc
res/dark/: index.theme
res/light/: index.theme
scripts/: pre-push-build.sh
src/: main.cpp
src/application/: application_mixin.cpp
src/gui/: gui_application.cpp  mainwindow.cpp
tests/: DevToolsTests.cmake  mock_helper.h  random_data.cpp  random_data.h  test_config.cpp.in  test_config.h.in  test_example.cpp  test_example_external.cpp  test_example_external.h  test_util.cpp  test_util.h
tests/core/: test_enum_cast.cpp
tests/core/data_conversion/: test.json  test.toml  test_block.yaml  test_data_conversion.cpp  test_flow.yaml
tests/core/exception/: test_common_exception.cpp  test_invalid_argument_exception.cpp  test_invalid_state_exception.cpp  (+2 more)
(+32 files in other folders)
